  in menus.

- Fixed bug that caused option to return from folded Linux kernel submenu to
  be missing.

- Code cleanup in bash scripts.

- Removed a stray exit command from refind-install, which caused
  premature termination of the script.

- Minimized reading of HiddenTools variable, which was being read
  unnecessarily often.

- I am officially deprecating the "tiano" target, which builds with
  TianoCore UDK2014 using custom Makefile rules rather than the usual
  TianoCore build process. I'm doing this because it's badly broken in my
  current build environment (Ubuntu 20.04). Although it may still work in
  older configurations, I'm not currently using or testing it, and I see
  no advantage to keeping it working.

0.13.2 (3/13/2021):
-------------------

- Fixed memory management bugs that could cause rEFInd to hang under
  certain unpredictable circumstances.

- Fixed potential memory management bugs that could cause HFS+, ext2fs, and
  ext4fs drivers to misbehave.

- Fixed bug (introduced with version 0.13.1) that caused rEFInd to fail to
  load properly signed EFI drivers when Secure Boot was enabled and used via
  Shim.

- Fixed bug in mvrefind that would cause it to fail to create a new
  NVRAM entry to point to the moved rEFInd.

- Fixed bug that caused mountesp script to fail in macOS 11.0 ("Big Sur").

- Improved Secure Boot support in refind-install script: The script can now
  install a Secure Boot key using mokutil, which can slightly simplify the
  MOK setup. It also now creates a backup NVRAM entry to boot directly,
  rather than via a Shim, if installed with the --shim option. This should
  help on systems with custom Secure Boot key sets that don't rely on Shim,
  but with a stray Shim binary present on the ESP that a package script will
  detect and pass as a --shim option to rEFInd. If this configuration causes
  a Secure Boot failure on launching Shim, then it should fail over to the