@@ -39,6 +39,14 @@
 - Minimized reading of HiddenTools variable, which was being read
   unnecessarily often.
 
+- Made rEFInd silent when timeout is -1.
+
+- Introduced log file rotation -- if refind.log-old exists and logging is
+  enabled, that log file is deleted and the existing log file is renamed to
+  refind.log-old. This enables preservation of two log files, which is
+  useful in case rEFInd crashes; the crash log file will be available as
+  refind.log-old.
+
 - I am officially deprecating the "tiano" target, which builds with
   TianoCore UDK2014 using custom Makefile rules rather than the usual
   TianoCore build process. I'm doing this because it's badly broken in my
